# libxft-bgra

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac  xft.pc.in
include/X11/Xft/: Xft.h  XftCompat.h
man/: .cvsignore  Makefile.am  Xft.3.in  Xft.man
src/: Makefile.am  xftcolor.c  xftcore.c  xftdbg.c  xftdpy.c  xftdraw.c  xftextent.c  xftfont.c  xftfreetype.c  xftglyphs.c  xftinit.c  xftint.h  xftlist.c  xftname.c  xftrender.c  xftstr.c  xftswap.c  xftxlfd.c
